tests/lazy_mode_fs_dependency/lazy_mode_fs_dependency.exp

Server should start in fs lazy mode
No errors!

The Flow server is currently in lazy mode and is only checking 0/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Focus a file
Error ------------------------------------------------------------------------------------------------------- foo.js:3:2

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   foo.js:3:2
   3| (require('bar'): string);
       ^^^^^^^^^^^^^^

References:
   node_modules/bar/index.js:3:18
   3| module.exports = 0;
                       ^ [1]
   foo.js:3:18
   3| (require('bar'): string);
                       ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Edit a dependency
No errors!

The Flow server is currently in lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Revert edit
Error ------------------------------------------------------------------------------------------------------- foo.js:3:2

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   foo.js:3:2
   3| (require('bar'): string);
       ^^^^^^^^^^^^^^

References:
   node_modules/bar/index.js:3:18
   3| module.exports = 0;
                       ^ [1]
   foo.js:3:18
   3| (require('bar'): string);
                       ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
